Fix IE8 Utilities>Reports>Shared Reports Alignment
The div with class “piano__item-content” had broken alignment and it was appearing overlapping the links border bottom line.

--- a/stylesheets/_component.piano.scss
+++ b/stylesheets/_component.piano.scss
@@ -7,7 +7,10 @@
     }
 
     @include ie-lte(8) {
-        position: static;
+        display: table;
+        height: 100%;
+        position: relative;
+        width: 100%;
     }
 }
 
